# clyse

./: .gitignore  CMakeLists.txt  README.md  analystic.h  css_color.h  main.cpp  minimalgraph.cpp  minimalgraph.h  output
.github/: FUNDING.yml
art/: logo.c
core/: core.cpp  core.h
opengl/: define_structure.h  shader.cpp  shader.h  vertex_buffer.h
src/: css_color.h  main.cpp  minimalgraph.cpp  minimalgraph.h
src/core/: core.cpp  core.h
src/opengl/: define_structure.h
src/opengl/shader/: basic.fs  basic.vs
